fixed gap on 2x2 grid on block two and three

--- a/styles.css
+++ b/styles.css
@@ -132,10 +132,11 @@ p {
     gap: 10px;
     align-items: center;
     justify-content: center;
+    align-content: center;
 }
 
 .block.two .hero .left .card, .block.three .hero .right .card {
     width: 40%;
-    height: 22.5%;
+    height: 25%;
     background: gray;
 }
